# react-fastapi-docker

./: .gitignore  Dockerfile  README.md  compose.yaml
backend/: .env.sample  README.md  migrate_seed.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 10a141ac9809_create_threads_table.py  14ae49c1cb0d_create_discussion_comments_table.py  6bd92d9e1b4c_rename_threads_to_discussion_threads.py  c9496b10d82b_added_users_table.py  d5fd17ab9677_add_image_path_to_discussion_threads.py
backend/app/: auth.py  db.py  main.py  models.py
backend/app/routers/: discussion_threads.py
backend/seeds/: seeds.py
backend/test/: conftest.py  test_discussion_thread.py  test_user.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/: CreateAccountForm.tsx  CreateDiscussionThreadForm.tsx  DiscussionThread.tsx  Header.tsx  LoginForm.tsx
frontend/src/pages/: CreateAccountPage.tsx  CreateDiscussionThreadPage.tsx  DeleteDiscussionThreadPage.tsx  HomePage.tsx  LoginPage.tsx  MyThreadsPage.tsx  UpdateDiscussionThreadPage.tsx
frontend/src/types/: types.tsx
frontend/src/utils/: utils.tsx
