[project]
name = "fastapi-demo-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.124.4",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.27",
]
[tool.pytest.ini_options]
filterwarnings = [
    'ignore:[\s\S]*session.execute()[\s\S]*:DeprecationWarning::'
]
